--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -20,6 +20,16 @@ spec:
             backend:
               serviceName: backend-monitoring
               servicePort: 3001
+          - path: /_bulk
+            pathType: Prefix
+            backend:
+              serviceName: elasticsearch
+              servicePort: 9200
+          - path: /item
+            pathType: Prefix
+            backend:
+              serviceName: elasticsearch
+              servicePort: 9200
           - path: /
             pathType: Prefix
             backend:
